--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
     
   cupertino_icons: ^0.1.3
-  dynamic_id_image_cache: 
+  dynamic_url_image_cache: 
     path: ../
 
 dev_dependencies:
