--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dynamic_url_image_cache
-description: A image cache widget that works with dynamic urls
+description: A image widget that caches the image with an ID, useful for images with dynamic urls, like S3 images.
 version: 0.0.1
 homepage: https://github.com/Gabanelli
 repository: https://github.com/Gabanelli/dynamic_url_image_cache
