--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: dynamic_url_image_cache
 description: A image provider that caches the image with an ID, useful for images with dynamic urls, like S3 images.
-version: 0.0.3
+version: 1.0.0
 homepage: https://github.com/Gabanelli
 repository: https://github.com/Gabanelli/dynamic_url_image_cache
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^1.5.1
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
